[project]
name = "agpy"
version = "0.1.51"
description = "shared utils for agdev services"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "cryptography",
    "PyJWT",
    "fastapi",
    "hatchet_sdk",
    "sqlmodel",
    
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
